@@ -1,0 +1,19 @@
+loadTemplate("org.kde.plasma-desktop.defaultPanel")
+
+for (var i = 0; i < screenCount; ++i) {
+    var desktop = new Activity
+    desktop.name = i18n("Desktop")
+    desktop.screen = i
+    desktop.wallpaperPlugin = 'image'
+    desktop.wallpaperMode = 'SingleImage'
+
+    //Create more panels for other screens
+    if (i > 0){
+        var panel = new Panel
+        panel.screen = i
+        panel.location = 'bottom'
+        panel.height = panels()[i].height = screenGeometry(0).height > 1024 ? 35 : 27
+        var tasks = panel.addWidget("tasks")
+        tasks.writeConfig("showOnlyCurrentScreen", true);
+    }
+}
