@@ -1,0 +1,12 @@
+                 |-----handy-ruler------------------------------------------------------|
+user-settings-kde: user-settings-kde (default user profile for KDE)
+user-settings-kde:
+user-settings-kde: This package contains a sensible default user profile for KDE.
+user-settings-kde: 
+user-settings-kde:
+user-settings-kde: 
+user-settings-kde: 
+user-settings-kde: 
+user-settings-kde:
+user-settings-kde:
+user-settings-kde: Package created by Niki Kovacs <info@microlinux.fr>
